--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <title>Elden Ring FanPage</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
     <img src="images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <div class="padre container-fluid">
-        <header class="navegacion row">
+    <div class="padre col-12">
+        <header class="navegacion">
             <!-- BARRA DE NAVEGACION -->
-            <nav class="navbar navbar-expand-lg navegacion row">
-                <div class="container-fluid row">
+            <nav class="navbar navbar-expand navegacion">
+                <div class="container-fluid">
                     <button class="navbar-toggler row" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +49,6 @@
                     </div>
                 </div>
             </nav>
-
         </header>
         <!-- ENCABEZADO -->
         <div class="encabezado row">
@@ -149,7 +149,7 @@
         <div class="pie row form1">
             <footer class="footer textoDorado">
                 <h4>Todos los derechos reservados</h4>
-                Mariano
+                <p class="text-center">Mariano</p>
             </footer>
         </div>
     </div>
