--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,14 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring FanPage Contacto</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="../css/harry.css"> -->
     <link rel="stylesheet" href="../css/styles.css">
 
 <body>
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <div class="padreContacto container-fluid">
-        <header class="navegacion row">
-            <nav class="navbar navbar-expand-lg navegacion row">
+    <div class="padreContacto col-12">
+        <header class="navegacion">
+            <nav class="navbar navbar-expand navegacion">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -45,22 +44,6 @@
                     </div>
                 </div>
             </nav>
-            <!-- <nav class="row">
-                <ol class="navBar">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="items.html">Items</a>
-                        <ul>
-                            <li><a  href="items.html#armas">Armas</a></li>
-                            <li><a  href="items.html#armors">Armaduras y Sets</a></li>
-                            <li><a  href="items.html#arcos">Arcos</a></li>
-                            <li><a  href="items.html#armases">Armas especiales</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="lore.html">Lore(Historia)</a></li>
-                    <li><a href="fotos.html">Fotos</a></li>
-                    <li><a href="contacto.html">Contácto</a></li>
-                </ol>
-            </nav> -->
         </header>
         <div class="divModel titulo row">
             <h1 class="textoClasico textoDorado textoGrande">Contacto</h1>
@@ -98,12 +81,6 @@
                             Tarde
                         </label>
                     </div>
-                    <!-- <div>
-                        <input class="textoSilverContacto" type="checkbox" value="m" name="maniana">Mañana
-                    </div>
-                    <div>
-                        <input class="textoSilverContacto" type="checkbox" value="t" name="tarde">Tarde
-                    </div> -->
                     <div class="divModelForm">
                         <label class="textoSilverContacto" for="">Sexo</label>
                     </div>
@@ -128,7 +105,7 @@
                     <div>
                         <label class="textoSilverContacto" for="socio">Socio</label>
                     </div>
-                    <div >
+                    <div>
                         <select class="form-select" aria-label="Default select example" name="socio">
                             <option value="s">Si</option>
                             <option value="n">No</option>
@@ -146,12 +123,13 @@
                 </fieldset>
             </form>
         </div>
-        <div class="pie row form1">
-            <footer class="footer textoDorado row">
-                <h4>Todos los derechos reservados</h4>
-                <p class="text-center">Mariano</p>
-            </footer>
-        </div>
     </div>
+    <div class="pie form1">
+        <footer class="footer textoDorado row">
+            <h4>Todos los derechos reservados</h4>
+            <p class="text-center">Mariano</p>
+        </footer>
+    </div>
+
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
