--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -14,10 +14,9 @@
 
 <body>
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <div class="padreFotos container-fluid">
-        <header class="navegacion row">
-            <nav class="navbar navbar-expand-lg navegacion row">
-                <div class="container-fluid">
+    <div class="padreFotos col-12">
+        <header class="navegacion">
+            <nav class="navbar navbar-expand navegacion">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +44,6 @@
                             <li class="nav-item"><a class="nav-link" href="contacto.html">Contácto</a></li>
                         </ul>
                     </div>
-                </div>
             </nav>
         </header>
         <div class="encabezadoF1 row">
@@ -56,7 +54,7 @@
         </div>
         <div data-aos="fade-left" data-aos-delay="500" class="pic1 row">
             <div>
-                <h3 class="textoSilver1 textoGrande text-center">RADHAN</h3>
+                <h3 class="textoSilver textoGrande text-center">RADHAN</h3>
             </div>
             <div class="row">
                 <img class="img-fluid imgFotos rounded mx-auto d-block" src="../images/radahn1.jpg" alt="">
@@ -80,7 +78,8 @@
             </div>
         </div>
         <aside data-aos="fade-up-left" data-aos-delay="500" class="txPic2 row">
-            <p class="textoSilver textoMediano text-start textoCentro">Rykard, Lord of Blasphemy is a Boss in Elden Ring.
+            <p class="textoSilver textoMediano text-start textoCentro">Rykard, Lord of Blasphemy is a Boss in Elden
+                Ring.
                 Rykard, Lord of Blasphemy is the true form of the God-Devouring Serpent, whose body has been taken
                 over by Rykard, and is found in Mt. Gelmir. This is an optional boss as players don't need to defeat
                 it to advance in Elden Ring.
@@ -101,7 +100,8 @@
             </div>
         </div>
         <aside data-aos="fade-up-right" class="txPic3 row">
-            <p class="textoSilver textoMediano text-end textoCentro">Sorceress Sellen is a Merchant and NPC in Elden Ring.
+            <p class="textoSilver textoMediano text-end textoCentro">Sorceress Sellen is a Merchant and NPC in Elden
+                Ring.
                 Sorceress Sellen can be found in Limgrave, inside Waypoint Ruins which is far east from Elden Ring's
                 starting point. You can learn Sorceries from her. This page covers vital information for Sorceress
                 Sellen's questline for Elden Ring. She also becomes available as an NPC Summon during specific boss
@@ -113,11 +113,12 @@
                 <h3 class="textoSilver textoGrande text-center">Corhyn</h3>
             </div>
             <div class="row">
-                <img class="img-fluid imgFotos rounded mx-auto d-block"  src="../images/Corhyn.jpg" alt="">
+                <img class="img-fluid imgFotos rounded mx-auto d-block" src="../images/Corhyn.jpg" alt="">
             </div>
         </div>
         <aside data-aos="fade-up-left" class="txPic4 row">
-            <p class="textoSilver textoMediano text-start textoCentro">Brother Corhyn is an NPC in Elden Ring. Brother Corhyn
+            <p class="textoSilver textoMediano text-start textoCentro">Brother Corhyn is an NPC in Elden Ring. Brother
+                Corhyn
                 is a holy practitioner who will teach you practical faith-based Incantations in exchange for Runes.
                 You will encounter him once you've reached the Roundtable Hold.</p>
         </aside>
@@ -133,7 +134,8 @@
             </div>
         </div>
         <aside data-aos="fade-up-right" class="txPic5 row">
-            <p class="textoSilver textoMediano text-end textoCentro">Majestic Eagles can be spotted among the cliffs, even
+            <p class="textoSilver textoMediano text-end textoCentro">Majestic Eagles can be spotted among the cliffs,
+                even
                 during these times.</p>
         </aside>
         <div data-aos="fade-up-right" class="pic6 row">
@@ -145,16 +147,18 @@
             </div>
         </div>
         <aside data-aos="fade-up-left" class="txPic6 row">
-            <p class="textoSilver textoMediano text-start textoCentro">Giant Crabs crowd the shores and shallows, attacking any
+            <p class="textoSilver textoMediano text-start textoCentro">Giant Crabs crowd the shores and shallows,
+                attacking any
                 who approach by swinging their powerful claws and spewing forth high-pressure water.</p>
         </aside>
-        <div class="pie row form1">
-            <footer class="footer textoDorado">
-                <h4>Todos los derechos reservados</h4>
-                <p class="text-center">Mariano</p>
-            </footer>
-        </div>
     </div>
+    <div class="pie form1">
+        <footer class="footer textoDorado">
+            <h4>Todos los derechos reservados</h4>
+            <p class="text-center">Mariano</p>
+        </footer>
+    </div>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init();
     </script>
