--- a/pages/items.html
+++ b/pages/items.html
@@ -8,46 +8,47 @@
     <title>Elden Ring FanPage Items</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <!-- <link rel="stylesheet" href="../css/harry.css"> -->
 
 <body>
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <div class="container-fluid">
-        <header>
-            <nav class="navbar navbar-expand-lg navegacion">
-                <div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="mb-2 mb-lg-0 navBar">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="items.html" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Items
-                                </a>
-                                <ul class="dropdown-menu navBar" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="items.html#armas">Armas</a></li>
-                                    <li><a class="dropdown-item" href="items.html#armors">Armaduras y Sets</a></li>
-                                    <li><a class="dropdown-item" href="items.html#arcos">Arcos</a></li>
-                                    <li><a class="dropdown-item" href="items.html#armases">Armas especiales</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="lore.html">Lore(Historia)</a></li>
-                            <li class="nav-item"><a class="nav-link" href="fotos.html">Fotos</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contacto.html">Contácto</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <h1 class="textoDorado textoGrande textoClasico text-center">Selecciona una categoria</h1>
 
+    <header>
+        <nav class="navbar navbar-expand navegacion">
+            <div class="col-12">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="mb-2 mb-lg-0 navBar">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="items.html" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Items
+                            </a>
+                            <ul class="dropdown-menu navBar" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="items.html#armas">Armas</a></li>
+                                <li><a class="dropdown-item" href="items.html#armors">Armaduras y Sets</a></li>
+                                <li><a class="dropdown-item" href="items.html#arcos">Arcos</a></li>
+                                <li><a class="dropdown-item" href="items.html#armases">Armas especiales</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="lore.html">Lore(Historia)</a></li>
+                        <li class="nav-item"><a class="nav-link" href="fotos.html">Fotos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contácto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="col-12">
+        <h1 class="textoDorado textoGrande textoClasico text-center">Selecciona una categoria</h1>
+    </div>
+    <div class="divModeling2">
         <div class="accordion row" id="accordionPanelsStayOpenExample">
             <div class="accordion-item backGroundAcordeon">
                 <h2 class="accordion-header row" id="panelsStayOpen-headingOne">
@@ -72,8 +73,7 @@
                         </aside>
                         <aside class="divModelForm1">
                             <div>
-                                <img style="width: 48px; height: 48px;"
-                                    src="../images/battle-axe__weapons-elden-ring-wiki-guide-200.png"
+                                <img class="imgItems" src="../images/battle-axe__weapons-elden-ring-wiki-guide-200.png"
                                     alt="Imagen de hacha de batalla">
                             </div>
                             <div>
@@ -295,13 +295,17 @@
                     </div>
                 </div>
             </div>
-            <div class="pie row form1">
-                <footer class="footer textoDorado row">
-                    <h4>Todos los derechos reservados</h4>
-                    <p class="text-center">Mariano</p>
-                </footer>
-            </div>
         </div>
-        <script src="../js/bootstrap.bundle.min.js"></script>
+    </div>
+        <div class="pie form1">
+            <footer class="footer textoDorado">
+                <h4>Todos los derechos reservados</h4>
+                <p class="text-center">Mariano</p>
+            </footer>
+        </div>
+
+    
+
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
 </body>
