espero sacarme un 7!!!

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 
 <body>
     <img src="images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <div class="padre col-12">
+    <div class="padre">
         <header class="navegacion">
             <!-- BARRA DE NAVEGACION -->
-            <nav class="navbar navbar-expand navegacion">
-                <div class="container-fluid">
-                    <button class="navbar-toggler row" type="button" data-bs-toggle="collapse"
+            <nav class="navbar navbar-expand">
+                <div class="col-12">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 navBar">
+                        <ul class="mb-2 mb-lg-0 navBar">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
@@ -56,7 +56,9 @@
         </div>
         <!-- PARRAFO -->
         <div class="parrafo1 row">
-            <p class="textoSilver textoGrande textoClasico">El mundo de Elden Ring está habitado por una serie de seres
+            <p class="textoSilver textoGrande textoClasico">Elden Ring es un videojuego de rol de acción desarrollado por FromSoftware y publicado por Bandai Namco Entertainment. El videojuego surge de una colaboración entre el director y diseñador Hidetaka Miyazaki y el novelista de fantasía George R. R. Martin. Fue lanzado a nivel mundial el 25 de febrero de 2022.
+
+                El mundo de Elden Ring está habitado por una serie de seres
                 bendecidos por los semidioses. Aunque este don puede llegar a perderse como ocurre con el personaje que
                 manejará
                 el jugador. Bajo el apodo de Sinluz, tratará de derrocar a los dioses que han despojado de todo a los
@@ -98,7 +100,7 @@
                 </p>
             </div>
         </div>
-        <div class="carousel1 car row">
+        <div class="carousel car row">
             <div id="carouselExampleIndicators" class="carousel slide row" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -148,7 +150,7 @@
         </div>
         <div class="pie row form1">
             <footer class="footer textoDorado">
-                <h4>Todos los derechos reservados</h4>
+                <h4>Todos los derechos reservados &copy; <script>document.write(new Date().getFullYear());</script></h4>
                 <p class="text-center">Mariano</p>
             </footer>
         </div>
