--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,10 +11,10 @@
 
 <body>
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <div class="padreContacto col-12">
+    <div class="padreContacto">
         <header class="navegacion">
-            <nav class="navbar navbar-expand navegacion">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand">
+                <div class="col-12">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -124,9 +124,9 @@
             </form>
         </div>
     </div>
-    <div class="pie form1">
-        <footer class="footer textoDorado row">
-            <h4>Todos los derechos reservados</h4>
+    <div class="pie row form1">
+        <footer class="footer textoDorado">
+            <h4>Todos los derechos reservados &copy; <script>document.write(new Date().getFullYear());</script></h4>
             <p class="text-center">Mariano</p>
         </footer>
     </div>
