--- a/pages/items.html
+++ b/pages/items.html
@@ -297,12 +297,12 @@
             </div>
         </div>
     </div>
-        <div class="pie form1">
-            <footer class="footer textoDorado">
-                <h4>Todos los derechos reservados</h4>
-                <p class="text-center">Mariano</p>
-            </footer>
-        </div>
+    <div class="pie row form1">
+        <footer class="footer textoDorado">
+            <h4>Todos los derechos reservados &copy; <script>document.write(new Date().getFullYear());</script></h4>
+            <p class="text-center">Mariano</p>
+        </footer>
+    </div>
 
     
 
