--- a/pages/lore.html
+++ b/pages/lore.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body>
+<body class="bodLore">
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
     <header>
         <nav class="navbar navbar-expand navegacion row">
-            <div class="container-fluid">
+            <div class="col-12">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -45,29 +45,44 @@
             </div>
         </nav>
     </header>
-    <div class="divModeling">
-        <h1 class="textoClasico textoDorado textoGrande">Historia principal</h1>
-        <p class="textoSilver textoSilver--align textoMediano">Los Sinluz fueron exiliados de las Tierras Intermedias, y
-            tu
-            propio personaje resulta ser un descendiente de aquellos que cayeron en desgracia en el pasado. A pesar de
-            estos
-            problemas, todo estaba relativamente «bien» en las Tierras Intermedias. Sin embargo, el Anillo de Elden se
-            hizo
-            añicos y un puñado de semidioses entraron en guerra entre sí en un conflicto llamado la Guerra de la
-            Destrucción, todos buscando convertirse en el nuevo Señor del anillo de Elden.
+    <div class="fade"></div>
 
-            Cuando esto ocurrió, según cuenta la historia de Elden Ring, la «guía de la gracia» se apareció a los Sinluz
-            exiliados, que no pudieron morir, invitándoles a volver a las Tierras Intermedias para trabajar y
-            eventualmente
-            para convertirse en el Señor de los Elden. Miyazaki señala que lo que realmente sucede cuando se logra esto
-            es
-            algo que tendrás que ver por ti mismo en el juego. El comienzo de Elden Ring marca la primera parada en el
-            viaje
-            de tu personaje Sinluz para convertirse en el señor del Anillo de Elden.</p>
-    </div>
-    <div class="pie form1">
+    <section class="elden-ring">
+
+        <div class="crawl">
+
+            <div class="title">
+                <p>Elden Ring</p>
+                <h1>La Historia</h1>
+            </div>
+
+            <p>Los Sinluz fueron exiliados de las Tierras
+                Intermedias, y
+                tu
+                propio personaje resulta ser un descendiente de aquellos que cayeron en desgracia en el pasado. A pesar de
+                estos
+                problemas, todo estaba relativamente «bien» en las Tierras Intermedias.</p>
+            <p>Sin embargo, el Anillo de Elden se
+                hizo
+                añicos y un puñado de semidioses entraron en guerra entre sí en un conflicto llamado la Guerra de la
+                Destrucción, todos buscando convertirse en el nuevo Señor del anillo de Elden.</p>
+            <p>Cuando esto ocurrió, según cuenta la historia de Elden Ring, la «guía de la gracia» se apareció a los Sinluz
+                exiliados, que no pudieron morir, invitándoles a volver a las Tierras Intermedias para trabajar y
+                eventualmente
+                para convertirse en el Señor de los Elden. Miyazaki señala que lo que realmente sucede cuando se logra esto
+                es
+                algo que tendrás que ver por ti mismo en el juego. El comienzo de Elden Ring marca la primera parada en el
+                viaje
+                de tu personaje Sinluz para convertirse en el señor del Anillo de Elden...</p>
+
+        </div>
+
+    </section>
+    <div class="pie row form1">
         <footer class="footer textoDorado">
-            <h4>Todos los derechos reservados</h4>
+            <h4>Todos los derechos reservados &copy;
+                <script>document.write(new Date().getFullYear());</script>
+            </h4>
             <p class="text-center">Mariano</p>
         </footer>
     </div>
