--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -14,9 +14,10 @@
 
 <body>
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <div class="padreFotos col-12">
+    <div class="padreFotos">
         <header class="navegacion">
-            <nav class="navbar navbar-expand navegacion">
+            <nav class="navbar navbar-expand">
+                <div class="col-12">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -44,23 +45,24 @@
                             <li class="nav-item"><a class="nav-link" href="contacto.html">Contácto</a></li>
                         </ul>
                     </div>
+                </div>    
             </nav>
         </header>
         <div class="encabezadoF1 row">
             <h1 class="textoClasico textoDorado textoGrande animate__shakeX">FOTOS</h1>
         </div>
         <div class="encabezadoF2 row">
-            <h2 class="textoDorado textoClasico textoGrande animate__animated animate__backInDown">Bosses</h2>
+            <h2 class="textoDorado textoClasico textoGrande animate__animated animate__backInDown backgTitles">Bosses</h2>
         </div>
-        <div data-aos="fade-left" data-aos-delay="500" class="pic1 row">
+        <div class="pic1 row">
             <div>
                 <h3 class="textoSilver textoGrande text-center">RADHAN</h3>
             </div>
             <div class="row">
-                <img class="img-fluid imgFotos rounded mx-auto d-block" src="../images/radahn1.jpg" alt="">
+                <img class="img-fluid imgFotos mx-auto d-block col-12 col-md-6" src="../images/radahn1.jpg" alt="">
             </div>
         </div>
-        <aside data-aos="fade-right" data-aos-delay="500" class="txPic1 row">
+        <aside class="txPic1 row">
             <p class="textoSilver textoMediano text-end textoCentro">Starscourge Radahn is a Boss in Elden Ring.
                 Starscourge
                 Radahn is a massive and destructive demigod located in Caelid, where he can be accessed from Redmane
@@ -89,7 +91,7 @@
                 defeat the serpent once again.</p>
         </aside>
         <div class="encabezadoF3 row">
-            <h2 class="textoDorado textoClasico textoGrande">NPCs</h2>
+            <h2 class="textoDorado textoClasico textoGrande backgTitles">NPCs</h2>
         </div>
         <div data-aos="fade-up-left" class="pic3 row">
             <div class="row">
@@ -123,7 +125,7 @@
                 You will encounter him once you've reached the Roundtable Hold.</p>
         </aside>
         <div class="encabezadoF4 row">
-            <h2 class="textoDorado textoClasico textoGrande">Criaturas y Enemigos</h2>
+            <h2 class="textoDorado textoClasico textoGrande backgTitles">Criaturas y Enemigos</h2>
         </div>
         <div data-aos="fade-up-left" class="pic5 row">
             <div class="row">
@@ -152,9 +154,9 @@
                 who approach by swinging their powerful claws and spewing forth high-pressure water.</p>
         </aside>
     </div>
-    <div class="pie form1">
+    <div class="pie row form1">
         <footer class="footer textoDorado">
-            <h4>Todos los derechos reservados</h4>
+            <h4>Todos los derechos reservados &copy; <script>document.write(new Date().getFullYear());</script></h4>
             <p class="text-center">Mariano</p>
         </footer>
     </div>
